kubernetes/apps/home/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: home
spec:
  type: ClusterIP
  ports:
    - port: 10010
      targetPort: 3000
  selector:
    app: homepage
