kubernetes/apps/home/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home
  name: homepage
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.rutberg.dev"
spec:
  ingressClassName: external
  rules:
    - host: home.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                namespace: security
                port:
                  number: 80
